--- a/Curly braces on plot.Rmd
+++ b/Curly braces on plot.Rmd
@@ -79,12 +79,15 @@ mine.heatmap <-
 b1 <- bracketsGrob(3/8, 0, 0.01, 0, h=0.05)
 b2 <- bracketsGrob(0.99, 0, 3/8, 0, h=0.05)
 
-mine.heatmap +  
+test2 <- test <- mine.heatmap +  
   coord_cartesian(ylim = c(1,10),clip = "off") +
-  theme(axis.text.x =  element_blank(),
-        axis.title.x = element_blank(),
-        axis.ticks = element_blank(),
-        plot.margin = unit(c(1,1,3,1), "lines")) +
+  theme(
+    axis.text =  element_blank(),
+    axis.title = element_blank(),
+    axis.ticks = element_blank(),
+    axis.ticks.length = unit(2, "lines")
+    # plot.margin = unit(c(1,1,2,1), "lines")
+  ) +
   annotation_custom(b1) + 
   annotation_custom(b2) +
   geom_text(data = tibble(x = c(2,6),
