--- a/R/6-fig1-pca-vs-pls.Rmd
+++ b/R/6-fig1-pca-vs-pls.Rmd
@@ -292,7 +292,7 @@ plot_grid(null.cor.p + fix_theme_cor,
           needle.pls.p + fix_theme_score + labs(title = NULL),
           nrow = 3, ncol = 3, align = "v", axis = "l", labels = "AUTO", label_x = 0.05) %>% 
   plot_grid(color.bar, align = "h", axis = "t", rel_widths = c(12,1)) %>%
-  save_plot(here("figs", "fig1_alt.png"), ., ncol = 3, nrow = 3, base_height = 3)
+  save_plot(here("figs", "three-scenarios.png"), ., ncol = 3, nrow = 3, base_height = 3)
 
 ```
 
